# ispyb-api

./: .bumpversion.cfg  .coveragerc  .git-notifier  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .readthedocs.yaml  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.txt  RELEASE.md  build_wheel.sh  catalog-info.yaml  dimple2ispyb.py  em_put_movie.py  em_put_particle.py  em_put_sample.py  ispyb_ingester.py  jupyterhub.sqlite  jupyterhub_cookie_secret  mxdatareduction2ispyb.py  pipeline2ispyb.py  put_dcgroup.py  pyproject.toml  release.sh  requirements_dev.txt  requirements_orm.txt  setup.cfg  setup.py  test  tomo2ispyb.py
.azure-pipelines/: azure-pipelines.yml  ci.yml  create-orm-update-pull-request  update-orm.yml
.github/workflows/: ci.yml  codeql-analysis.yml  test-and-publish.yml  update-orm.yml
.github/workflows/ci/: action.yml
.github/workflows/scripts/: create-orm-update-pull-request
.github/workflows/update-orm/: action.yml
conf/: config.example.cfg  data.sql  defaults.example.cfg  lookups.sql  routines.sql  schema.sql  simulate_example.yml  stomp.example.cfg  tables.sql  ws_config.example.cfg
docs/: INSTALL.md  Makefile  api.rst  conf.py  contributing.rst  index.rst  installation.rst  ispyb-db.html  make.bat  pipeline2ispyb.py  requirements.txt  simulate.rst  sqlalchemy.rst  usage.rst
ispyb/: ExtendedOrderedDict.py  __init__.py  api-mx.txt  conftest.py  connection.py  core.py  dbconnection.py  emacquisition.py  exception.py  extendedordereddict.py  factory.py  mxacquisition.py  mxdatareduction.py  mxhighlevel.py  mxmr.py  mxprocessing.py  mxscreening.py  shipping.py  storedroutines.py  strictordereddict.py  test_dummy.py  xmltools.py
ispyb/api/: datacollection.py  main.py  reprocessing.py
ispyb/cli/: last_data_collections_on.py
ispyb/common/: driver.py
ispyb/connector/mysqlsp/: main.py
ispyb/connector/ws/: main.py
ispyb/driver/: api.py  database.py  dummy.py  mysql.py
ispyb/driver/mysql/: main.py
ispyb/driver/mysqlsp/: main.py
ispyb/interface/: acquisition.py  connection.py  core.py  dataarea.py  factory.py  main.py  model.py  processing.py  reprocessing.py  screening.py  shipping.py
ispyb/interface/connection/: main.py
ispyb/interface/discipline/: acquisition.py  core.py  processing.py
ispyb/legacy/: exception.py  release.sh  setup.py
ispyb/legacy/common/: driver.py
ispyb/legacy/driver/: api.py  dummy.py
ispyb/legacy/driver/mysql/: cursors.py  main.py  stored_procedures.py
ispyb/legacy/interface/: README.MD  datacollection.py  main.py  processing.py  reprocessing.py
ispyb/legacy/test/common/: test_driver.py
ispyb/legacy/test/driver/: test_common.py
ispyb/legacy/test/driver/mysql/: test_cursors.py  test_stored_procedures.py
ispyb/legacy/test/interface/: test_interface_documentation.py
ispyb/model/: __future__.py  __init__.py  autoprocprogram.py  container.py  datacollection.py  detector.py  gridinfo.py  image_quality_indicators.py  integration.py  interface.py  pdb.py  processingjob.py  processingprogram.py  sample.py  samplegroup.py  screening.py  test_unitcell.py
ispyb/sp/: acquisition.py  core.py  emacquisition.py  mxacquisition.py  mxdatareduction.py  mxmr.py  mxprocessing.py  mxscreening.py  shipping.py  storedroutines.py  xtalimaging.py
ispyb/sqlalchemy/: README.md  __init__.py  _auto_db_schema.py  serialize.py
ispyb/test/api/: test_api_documentation.py
ispyb/test/common/: test_driver.py
ispyb/test/driver/: test_common.py  test_database.py
ispyb/test/driver/mysql/: test_cursors.py  test_stored_procedures.py
ispyb/test/interface/: test_interface_documentation.py
ispyb_api/: ExtendedOrderedDict.py  core.py  dbconnection.py  em.py  mxacquisition.py  mxdatareduction.py  mxmr.py  mxstrategy.py  tomo.py
legacy/: put_dcgroup.py  put_program.py
src/ispyb/: __init__.py  factory.py  generators.py  xmltools.py
src/ispyb/cli/: job.py  last_data_collections_on.py  simulate.py
src/ispyb/connector/mysqlsp/: main.py
src/ispyb/connector/ws/: main.py
src/ispyb/interface/: acquisition.py  connection.py  core.py  dataarea.py  factory.py  processing.py  shipping.py
src/ispyb/model/: README.MD  __future__.py  container.py  datacollection.py  gridinfo.py  image_quality_indicators.py  integration.py  interface.py  pdb.py  sample.py
src/ispyb/simulation/: README.md  base.py  datacollection.py  sqlalchemy_helpers.py
src/ispyb/sp/: acquisition.py  core.py  emacquisition.py  mxacquisition.py  mxprocessing.py  mxscreening.py  shipping.py  xtalimaging.py
src/ispyb/sqlalchemy/: README.md  __init__.py  _auto_db_schema.py  sqlacodegen.patch
src/ispyb/zocalo/: service.py
tests/: conftest.py  test_core.py  test_em_structures.py  test_misc.py  test_mxacquisition.py  test_mxdatareduction.py  test_mxhighlevel.py  test_mxmr.py  test_mxprocessing.py  test_mxscreening.py  test_open.py  test_shipping.py  test_strictordereddict.py  test_ws_connection.py  test_xmltools.py  test_xtalimaging.py  testtools.py
tests/cli/: test_job.py  test_last_data_collections_on.py
tests/data/: .dc_id  autoPROC-two-ap_scaling_containers.xml  mx_data_reduction_pipeline_results.xml
tests/model/: test_datacollection.py  test_dbcache.py  test_detector.py  test_encapsulation.py  test_image_quality_indicators.py  test_pdb.py  test_sample.py  test_samplegroup.py  test_screening.py  test_unitcell.py
tests/sqlalchemy/: test_models.py  test_serialize.py  test_session.py
