[bumpversion]
current_version = 6.0.2
commit = True
tag = True

[metadata]
name = ispyb
description = Python package to access ISPyB database
description-file = README.md
long_description = This package provides a Python interface to ISPyB. It can access the ISPyB database directly or (in future versions) run on top of the official ISPyB webservices API.
author = Diamond Light Source
author_email = scientificsoftware@diamond.ac.uk
license = Apache License, Version 2.0
classifiers = 
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
keywords = 
	ISPyB
	database
project-urls = 
	Documentation = https://ispyb.readthedocs.io
	GitHub = https://github.com/DiamondLightSource/ispyb-api
	Bug-Tracker = https://github.com/DiamondLightSource/ispyb-api/issues

[options]
include_package_data = True
install_requires = 
	mysql-connector-python
	sqlalchemy
	tabulate
packages = find:
package_dir = 
	=src
python_requires = >=3.6
scripts = 
	bin/dimple2ispyb.py
	bin/mxdatareduction2ispyb.py

[options.entry_points]
libtbx.precommit = 
	ispyb = ispyb
console_scripts = 
	ispyb.last_data_collections_on = ispyb.cli.last_data_collections_on:main

[options.packages.find]
where = src

[bumpversion:file:setup.py]
search = (version="{current_version}")
replace = (version="{new_version}")

[bumpversion:file:src/ispyb/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
