[metadata]
name = ispyb
version = 10.0.0
description = Python package to access ISPyB database
description-file = README.md
long_description = This package provides a Python interface to ISPyB. It can access the ISPyB database directly or (in future versions) run on top of the official ISPyB webservices API.
author = Diamond Light Source
author_email = scientificsoftware@diamond.ac.uk
license = Apache License, Version 2.0
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
keywords =
	ISPyB
	database
project-urls =
	Documentation = https://ispyb.readthedocs.io
	GitHub = https://github.com/DiamondLightSource/ispyb-api
	Bug-Tracker = https://github.com/DiamondLightSource/ispyb-api/issues

[options]
include_package_data = True
install_requires =
	mysql-connector-python>=8.0.32
	sqlalchemy<2
	tabulate
packages = find:
package_dir =
	=src
python_requires = >=3.7
scripts =
	bin/dimple2ispyb.py
	bin/mxdatareduction2ispyb.py

[options.entry_points]
console_scripts =
	ispyb.job = ispyb.cli.job:main
	ispyb.last_data_collections_on = ispyb.cli.last_data_collections_on:main
libtbx.dispatcher.script =
	ispyb.job = ispyb.job
	ispyb.last_data_collections_on = ispyb.last_data_collections_on
libtbx.precommit =
	ispyb = ispyb

[options.packages.find]
where = src

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E401,E711,E712,E713,E714,E721,E722,E901,
    F401,F402,F403,F405,F541,F631,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606,
    # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
    C4,
