[metadata]
name = ispyb
version = 10.2.3
description = Python package to access ISPyB database
description_file = README.md
long_description = This package provides a Python interface to ISPyB. It can access the ISPyB database directly or (in future versions) run on top of the official ISPyB webservices API.
author = Diamond Light Source
author_email = scientificsoftware@diamond.ac.uk
license = Apache License, Version 2.0
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
keywords =
	ISPyB
	database
project_urls =
	Documentation = https://ispyb.readthedocs.io
	GitHub = https://github.com/DiamondLightSource/ispyb-api
	Bug-Tracker = https://github.com/DiamondLightSource/ispyb-api/issues

[options]
include_package_data = True
install_requires =
	mysql-connector-python>=8.0.32
	sqlalchemy<2
	tabulate
packages = find:
package_dir =
	=src
python_requires = >=3.7
scripts =
	bin/dimple2ispyb.py
	bin/mxdatareduction2ispyb.py

[options.entry_points]
console_scripts =
	ispyb.job = ispyb.cli.job:main
	ispyb.last_data_collections_on = ispyb.cli.last_data_collections_on:main
libtbx.dispatcher.script =
	ispyb.job = ispyb.job
	ispyb.last_data_collections_on = ispyb.last_data_collections_on
libtbx.precommit =
	ispyb = ispyb

[options.packages.find]
where = src
